objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Opportunity_ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Update__c</fullName>
        <label>Opportunity Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_is_Logged_In__c</fullName>
        <formula>OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner is Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payload_Action__c</fullName>
        <label>Payload Action</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_and_Product_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked from the Early Implementation button and is unchecked from the Opportunity Unlock button when checked.</description>
        <label>Pricing and Product Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_ready_to_send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by QorusDocs Integration</description>
        <inlineHelpText>Set to true when Proposal is ready to review and send to Client</inlineHelpText>
        <label>Proposal ready to send?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qtmpf__c</fullName>
        <formula>IF(TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c) == &quot;Approved&quot;,
&quot;Approved&quot;,
IF(AND(TEXT(SBQQ__PrimaryQuote__r.ApprovalStatus__c) &lt;&gt; &quot;&quot;, AND(TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c) &lt;&gt; &quot;Approved&quot;, TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c) &lt;&gt; &quot;Rejected&quot;)),
&quot;Requires Approval&quot;,
IF(TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c) == &quot;Rejected&quot;,
&quot;Rejected&quot;,
&quot;Approved&quot;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qtmpf</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Count__c</fullName>
        <description>This field is updated by the Dynamic Rollup summary package.. This should be Read only field for all profiles except admins</description>
        <label>RFP Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Finalist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will replace the RFP finalist picklist field in Teladoc Prod.</description>
        <inlineHelpText>Is this Opportunity an RFP finalist?</inlineHelpText>
        <label>RFP Finalist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_CIM_Broadcast_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Mulesoft process the Request CIM payload</description>
        <label>Request CIM Broadcast Message?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Effective_Date__c</fullName>
        <description>Revenue Effective Date is populated with the Start Date of the Primary Quote. To edit or modify, update the Start date on the Quote.</description>
        <formula>IF(ISNULL(L2O_Revenue_Effective_Date__c), SBQQ__PrimaryQuote__r.SBQQ__StartDate__c,L2O_Revenue_Effective_Date__c)</formula>
        <inlineHelpText>Revenue Effective Date is populated with the Start Date of the Primary Quote. To edit or modify, update the Start date on the Quote.</inlineHelpText>
        <label>Revenue Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upside_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of SCDEV-5397 to update the opportunity forecast category to Upside when this checkbox is true.</description>
        <inlineHelpText>Place opportunity in the &quot;Upside&quot; Forecast Category</inlineHelpText>
        <label>Upside Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bizible2__Bizible_Opportunity_Amount__c</fullName>
        <description>Only to be used if a number other than Amount should be used to calculate attribution</description>
        <inlineHelpText>Only to be used if a number other than Amount should be used to calculate attribution</inlineHelpText>
        <label>Bizible Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>l2O_Loss_Reason_Description__c</fullName>
        <description>Provide more detail about Prospect lost</description>
        <label>Loss Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Current_Sales_Campaign__c</fullName>
        <label>Current Sales Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Activity_By_Sales__c</fullName>
        <label>Last Activity by Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Sales_Engagement__c</fullName>
        <label>Last Sales Engagement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__MarketoAnalyzer__c</fullName>
        <description>This creates a link to the Marketo Opportunity Influence Analyzer. This feature requires an active subscription to Marketo Revenue Cycle Analytics.</description>
        <formula>HYPERLINK (&quot;/apex/mkto_si__MarketoRedirect?actionName=salesInsightAnalytics&amp;reportType=AccountAnalyzer&amp;objType=Opportunity&amp;objId=&quot; &amp; Id, IMAGE($Label.mkto_si__Marketo_Logo_16, $Label.mkto_si__Marketo_Opportunity_Analysis))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketo Opportunity Analysis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Opportunity_Full_List?mode=fullList&amp;id=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Last_Replied__c</fullName>
        <label>Sales Last Replied</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qtmpstatus__c</fullName>
        <label>QtmpStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStatus__c</fullName>
        <description>Overall Approval Status for this Opportunity</description>
        <inlineHelpText>Overall Approval Status for this Opportunity</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <description>Used with Native Approvals to indicate the step in the approval process this Opportunity is in</description>
        <inlineHelpText>Used with Native Approvals to indicate the step in the approval process this Opportunity is in</inlineHelpText>
        <label>Approval Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used with Native Approvers; indicates which Approver is responsible for approving the Opportunity.</description>
        <inlineHelpText>Used with Native Approvers; indicates which Approver is responsible for approving the Opportunity.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__StepApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with Native Approvals; to indicate whether the step has been approved</description>
        <inlineHelpText>Used with Native Approvals; to indicate whether the step has been approved</inlineHelpText>
        <label>Step Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__SubmittedDate__c</fullName>
        <description>Date when record was submitted for approval</description>
        <inlineHelpText>Date when record was submitted for approval</inlineHelpText>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sbaa__SubmittedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User requesting approval for the Opportunity.</description>
        <inlineHelpText>User requesting approval for the Opportunity.</inlineHelpText>
        <label>Submitted User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubmittedUserOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_HospitalID__c</fullName>
        <description>ID of the hospital to which this RFP belongs to</description>
        <label>Definitive ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_RFPID__c</fullName>
        <description>RFP Identifier in the DefinitiveHC database.</description>
        <label>RFP ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ALTF__Altify_Opportunities_CRUD_Search</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>Altify Opportunities CRUD Search</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Kanban</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Kanban</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>L2O_Initial_of_Lives__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Revenue_Effective_Date__c</columns>
        <columns>L2O_Bookings_Total__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>L2O_Sub_Channel_Segment__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>L2O_Subtype__c</columns>
        <columns>L2O_Sub_Type_Detail__c</columns>
        <columns>L2O_Contracting_Account__c</columns>
        <columns>L2O_Comments__c</columns>
        <columns>Opportunity_Update__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Can_Not_Update_Request_CIM</fullName>
        <active>true</active>
        <description>Request CIM cannot be unchecked. Please contact system administrators.</description>
        <errorConditionFormula>AND(
  $Profile.Name !=&apos;System Administrator&apos;,
  ISCHANGED(L2O_Request_CIM__c),
  L2O_Request_CIM__c =false,
 $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False
)</errorConditionFormula>
        <errorDisplayField>L2O_Request_CIM__c</errorDisplayField>
        <errorMessage>Request CIM cannot be unchecked. Please contact system administrators.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Early_Implementation_Opportunity_Lock</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				Early_Implementation__c = true, 
				Pricing_and_Product_Lock__c = true, 
			 $Profile.Name != &apos;System Administrator&apos;,
				OR(
								ISCHANGED( Pricebook2Id ),
				    ISCHANGED( SBQQ__PrimaryQuote__c ),
				    ISCHANGED( L2O_Contract_Path__c ),
				    ISCHANGED( L2O_Contracting_Account__c),
				    ISCHANGED( L2O_Initial_of_Lives__c ),
				    ISCHANGED( AccountId ),
				    ISCHANGED( L2O_Client_Line_of_Business__c ),
				    ISCHANGED( L2O_Benefit_Consultant_Involved_in_Deal__c )
    )
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>This field(s) cannot be edited when the opportunity is locked due to early implementation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Before_discovery_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( TEXT(L2O_Contract_Path__c ) ),
NOT( ISPICKVAL(StageName, &quot;Prospect&quot;)),
ISCHANGED(StageName),
NOT(ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;)),
NOT(ISNEW())) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>&apos;Contract Path&apos; is required at all Opportunity stages other than Prospect.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Business_Region_Update</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(StageName,&apos;Review/Negotiation&apos;) , ISPICKVAL(StageName,&apos;Contracting&apos;)) ,
  ISCHANGED(L2O_Business_Region__c)
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Business region not editable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Competitor_mandatory</fullName>
        <active>true</active>
        <description>Competitor field mandatory when opportunity closed lost and lost reason is Competition</description>
        <errorConditionFormula>AND(
   TEXT(StageName) == &apos;Closed Lost&apos;,
   TEXT(L2O_Loss_Reason__c) == &apos;Competition&apos;,
   ISNULL(L2O_Competitor_s__c),
   OR(
     ISPICKVAL( L2O_Loss_Reason_Detail__c , &apos;Competitor-Product/Services&apos;),
     ISPICKVAL( L2O_Loss_Reason_Detail__c , &apos;Competitor-Pricing&apos;)
     )
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Please add the competitor(s) as the opportunity is closed lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Contract_Path_Subtype</fullName>
        <active>true</active>
        <description>CRMINT-19258 - 10/20 deactivated to complete this ticket.</description>
        <errorConditionFormula>((TEXT(L2O_Contract_Path__c) == &apos;US Health Plan&apos; || TEXT(L2O_Contract_Path__c) == &apos;Intl Insurer&apos;) &amp;&amp; ( TEXT(L2O_Contract_Path_Sub_type__c) == &apos;None&apos; || TEXT(L2O_Contract_Path_Sub_type__c) == NULL)) ||

((TEXT(L2O_Contract_Path__c) != &apos;US Health Plan&apos; &amp;&amp; TEXT(L2O_Contract_Path__c) != &apos;Intl Insurer&apos;) &amp;&amp;
NOT(ISPICKVAL(L2O_Contract_Path__c,&quot;&quot;))&amp;&amp; TEXT(L2O_Contract_Path_Sub_type__c) != &apos;None&apos;) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>The Contract Path Subtype may only be &quot;None&quot; given the Contract Path is not Healthplan or Intl Insurer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Custom_Probability_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>Custom_Probability_Used__c = TRUE &amp;&amp; ISBLANK( Custom_Probability_Reason__c) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Please add a reason for using custom probability</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Hunting_License_Validation_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; TEXT(L2O_Subtype__c)= &apos;Hunting License&apos; &amp;&amp; TEXT(L2O_Contract_Path__c) = &apos;US Health Plan&apos;
&amp;&amp;
(NOT(TEXT(L2O_Client_Line_of_Business__c) = &apos;Commercial ASO - Opt In&apos;) &amp;&amp;
NOT(TEXT(L2O_Client_Line_of_Business__c) = &apos;Commercial ASO - Opt Out&apos;) )</errorConditionFormula>
        <errorMessage>For SubType Hunting License, only &apos;Commercial ASO - Opt In&apos; or &apos;Commercial ASO - Opt Out&apos; as Client line of business is allowed for this &apos;Health Plan&apos; contract path</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Initial_Sale_Partner_Validation_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; TEXT(L2O_Subtype__c )= &apos;Initial Sale - Partner&apos; &amp;&amp; TEXT(L2O_Contract_Path__c) = &apos;US Health Plan&apos; &amp;&amp; 
( 
  TEXT(L2O_Client_Line_of_Business__c) = &apos;Commercial ASO - Opt In&apos; || 
  TEXT(L2O_Client_Line_of_Business__c) = &apos;Commercial ASO - Opt Out&apos; ||  
  TEXT(L2O_Pricing_Model__c) = &apos;ASO - Opt In&apos; || 
  TEXT(L2O_Pricing_Model__c) = &apos;ASO - Opt Out&apos;
)</errorConditionFormula>
        <errorMessage>For SubType Initial Sale - Partner, &apos;Commercial ASO - Opt In&apos; or &apos;Commercial ASO - Opt Out&apos;  as Client line of business and  &apos;ASO-Opt in&apos;  or  &apos;ASO-Opt out&apos; as Pricing Model is not allowed for this &apos;Health Plan&apos; contract path</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Launch_Date_Update_Validate</fullName>
        <active>true</active>
        <errorConditionFormula>(TEXT(Type) != &apos;Existing Business&apos; || TEXT(L2O_Subtype__c) != &apos;Change Order&apos;) &amp;&amp; L2O_Launch_Date_Update__c = True &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Launch Date Update can only be selected for Change Order amendments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Lessor_Identified_Before_Closing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(L2O_Sales_Type__c, &quot;Lease&quot;), 
ISBLANK(L2O_Lessor_Account__c), 
ISPICKVAL(StageName, &quot;Closed Won&quot;)) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Lease Opportunities must have a Lessor identified before Closing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Lock_Closed_Opportunity</fullName>
        <active>true</active>
        <description>Prevents Stage Change once Opportunity is Closed</description>
        <errorConditionFormula>IF( 
   OR(AND(ISCHANGED(StageName),ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;)),
      AND(NOT(CONTAINS($Profile.Name,&quot;Administrator&quot;)), ISCHANGED(StageName), ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;)))
   ,true,false)</errorConditionFormula>
        <errorMessage>Cannot change Stage as the Opportunity is Closed Won or Closed Lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Loss_Reason_Description</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
TEXT(StageName) == &apos;Closed Lost&apos;,
TEXT(L2O_Loss_Reason__c) == &apos;Other&apos;,
ISBLANK(l2O_Loss_Reason_Description__c),
OR(
ISPICKVAL( L2O_Loss_Reason_Detail__c , &apos;Timing&apos;),
ISPICKVAL( L2O_Loss_Reason_Detail__c , &apos;Internal -Contract Path Change&apos;),
ISPICKVAL( L2O_Loss_Reason_Detail__c , &apos;No Decision / Unresponsive&apos;)
)
)</errorConditionFormula>
        <errorDisplayField>l2O_Loss_Reason_Description__c</errorDisplayField>
        <errorMessage>Please provide Loss reason description as the Opportunity is Closed Lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Opp_Account_NotChange_Contracted</fullName>
        <active>true</active>
        <description>AND(ISCHANGED( L2O_Contracting_Account__c ),
SBQQ__Contracted__c == TRUE )</description>
        <errorConditionFormula>AND(ISCHANGED( AccountId ),
SBQQ__Contracted__c == TRUE ) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Due to the Contracted flag as TRUE; Opportunity account details can&apos;t be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Parent_Opportunity_Required</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; TEXT(L2O_Subtype__c) == &apos;Hunting License&apos; &amp;&amp; L2O_Contracting_Account__r.Name != &apos;Teladoc Health, Inc.&apos; &amp;&amp;  L2O_Parent_Opportunity__c == null</errorConditionFormula>
        <errorMessage>Please add parent opportunity as the Opportunity subtype is &apos;Hunting License&apos; and contracting account is not Teladoc</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Referral_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
L2O_Referencing_Client__c != null,
L2O_Referral_Notes__c!= null,
NOT(ISPICKVAL(L2O_Referral_Tier__c, &apos;&apos;))
),
L2O_Referral__c == false
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Please ensure that the Opportunity is a referral (Referral? checkbox=true) in order to save/update referral details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Renewal_SubType_Update</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Type, &apos;Re-Sign Business&apos;),
ISPICKVAL(StageName,&apos;Closed Lost&apos;), 
NOT(ISPICKVAL(L2O_Subtype__c,&apos;Attrition / Expiry&apos;)) 
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Update Sub Type to Attrition/Expiry before moving to Closed Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Require_Account</fullName>
        <active>true</active>
        <description>This rule requires the native account field on the opportunity per defect: CON0000681-169375</description>
        <errorConditionFormula>ISBLANK(AccountId) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Please link this opportunity to an Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Require_Contracting_Account</fullName>
        <active>true</active>
        <description>AND(ISBLANK( L2O_Contracting_Account__c ),
ISPICKVAL (L2O_Contract_Path_Sub_type__c ,&apos;Contracted Pricing&apos;) )</description>
        <errorConditionFormula>AND(ISBLANK( L2O_Contracting_Account__c ),
ISPICKVAL (L2O_Contract_Path_Sub_type__c ,&apos;Contracted Pricing&apos;) ) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Ensure to fill Contracting Account if Contract Path SubType is Contracted Pricing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Subtype_Detail_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(Type, &apos;Existing Business&apos;),
 ISCHANGED(StageName),
 ISBLANK(TEXT(L2O_Sub_Type_Detail__c)),
 AND(
   NOT(ISPICKVAL(L2O_Channel_Segment__c,&apos;International&apos;)),
   NOT(ISPICKVAL(L2O_Channel_Segment__c,&apos;Hospital &amp; Health System (HHS)&apos;))
 ), 
 AND(
   NOT(ISPICKVAL(StageName,&apos;Discovery&apos;)),
   NOT(ISPICKVAL(StageName,&apos;Prospect&apos;))
 )
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorDisplayField>L2O_Sub_Type_Detail__c</errorDisplayField>
        <errorMessage>Require Sub-Type Detail  to be populated before moving past Discovery stage</errorMessage>
    </validationRules>
</CustomObject>